[package]
name = "once_map"
version = "0.3.0"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Single assignment maps"

repository = "https://github.com/a1phyr/once_map"
documentation = "https://docs.rs/once_map"

categories = ["caching", "data-structures", "memory-management", "rust-patterns", "no-std"]


[features]
default = ["std"]
std = ["parking_lot", "stable_deref_trait/std"]

[dependencies]
hashbrown = "0.12"
stable_deref_trait = { version = "1.2", features = ["alloc"], default-features = false }

parking_lot = { version = "0.12", optional = true }
spin = { version = "0.9.3", default-features = false, features = ["rwlock"], optional = true }

[dev-dependencies]
crossbeam-utils = "0.8.7"
