[package]
name = "once_map"
version = "0.4.4"
edition = "2021"
rust-version = "1.61"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Single assignment and lazy maps"

repository = "https://github.com/a1phyr/once_map"
documentation = "https://docs.rs/once_map"

categories = ["caching", "data-structures", "rust-patterns", "no-std"]
keywords = ["map", "once", "lazy"]


[features]
default = ["std", "ahash"]

std = ["dep:parking_lot", "stable_deref_trait/std", "ahash?/std", "ahash?/runtime-rng"]
ahash = ["dep:ahash", "hashbrown/ahash"]

[dependencies]
ahash = { version = "0.8", default-features = false, optional = true }
hashbrown = { version = "0.13", default-features = false, features = ["raw"] }
stable_deref_trait = { version = "1.2", features = ["alloc"], default-features = false }

parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
crossbeam-utils = "0.8.7"
