[package]
name = "once_map"
version = "0.4.15"
edition = "2021"
rust-version = "1.63"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Single assignment and lazy maps"

repository = "https://github.com/a1phyr/once_map"
documentation = "https://docs.rs/once_map"

categories = ["caching", "concurrency", "data-structures", "rust-patterns", "no-std"]
keywords = ["map", "once", "lazy"]


[features]
default = ["std", "ahash"]

std = ["dep:parking_lot", "stable_deref_trait/std", "ahash?/std", "ahash?/runtime-rng"]
ahash = ["dep:ahash", "hashbrown/ahash"]

rayon = ["dep:rayon", "hashbrown/rayon", "std"]

[dependencies]
ahash = { version = "0.8", default-features = false, optional = true }
hashbrown = { version = "0.14.2", default-features = false, features = ["raw"] }
stable_deref_trait = { version = "1.2", features = ["alloc"], default-features = false }

equivalent = { version = "1.0", optional = true }

parking_lot = { version = "0.12", optional = true }
rayon = { version = "1.6", optional = true }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
